docs/admc/version-1.28/modules/en/pages/howtos/ui-extension/01-install.adoc
= Rancher UI extension quickstart
:revdate: 2025-07-09
:page-revdate: {revdate}
:description: UI extension quickstart for Kubewarden.
:doc-persona: ["kubewarden-operator", "kubewarden-integrator"]
:doc-topic: ["operator-manual", "ui-extension", "installation"]
:doc-type: ["howto"]
:keywords: ["kubewarden", "kubernetes", "rancher ui extension"]
:sidebar_label: Quickstart
:current-version: {page-origin-branch}

This section describes installing the Kubewarden UI as an extension of
https://github.com/rancher/rancher[Rancher Manager].

[IMPORTANT]
====
You need a running instance of Rancher Manager `v2.7.0` or greater.
====


== Install Kubewarden UI Extension

The Kubewarden UI is installed as a global extension,
however,
the Kubewarden controller is installed through the Rancher UI as a cluster scoped resource.

[NOTE]
====
For air-gapped installations, follow xref:howtos/airgap/02-install.adoc[these steps].
====


Within the Extensions page,
select the "Enable" button and choose the option to add the Rancher Extensions Repository.
When enabled, the "Kubewarden" extension item appears automatically.
Select this item to install the extension.
Once installed, you can install Kubewarden into the required cluster.

=== Install Kubewarden

Following the previous steps, within your cluster a new item appears in the side-menu for Kubewarden.
This dashboard page guides you through the installation process, completing the prerequisites.

[NOTE]
====
During the "App Install" step of the installation wizard,
the "Install Kubewarden" button may remain grayed out.
If this happens, refresh the page and navigate back to this step.
====


== Post-Installation

After completing the installation the dashboard page and side menu now contain new items,
namely Policy Servers, Cluster Admission Policies, and Admission Policies.
From here you can create Policy Servers and Policies to control behavior within your cluster.

*_Dashboard view_*
image:ui_dashboard.png[UI Dashboard]

=== Enabling the default Policy Server and policies

Within the dashboard page you can select the "Install Chart" button to install the
https://github.com/kubewarden/helm-charts/tree/main/charts/kubewarden-defaults[`kubewarden-defaults`]
Helm chart,
which includes the default Policy Server and a few curated policies.

After installing the chart, you can view the default Policy Server details with the related policies in a sortable table.

*_Policy Server detail view_*
image:ui_policyserver_detail.png[UI PolicyServer Detail]

=== Creating policies

When creating policies, you will initially be given a "Custom Policy" option from the Policy Grid.
Provide the required information for your policy's Name, Module, and Rules.

*_Creating a custom policy_*
image:ui_policy_custom.png[UI Policy Whitelist]

=== Additional features

Follow the instructions to include xref:howtos/ui-extension/02-metrics.adoc[Monitoring] or xref:howtos/ui-extension/03-tracing.adoc[Tracing].

== Air gap installation

[CAUTION]
====
This requires Rancher Manager version `v2.8.0` or greater.
====


As Kubewarden is a Rancher Official Extension,
the Rancher team provides a mechanism to automatically generate an Extension Catalog Image.
This is added to the `rancher-images.txt` file when
https://ranchermanager.docs.rancher.com/getting-started/installation-and-upgrade/other-installation-methods/air-gapped-helm-cli-install/publish-images#1-find-the-required-assets-for-your-rancher-version[installing Rancher Manager]
for air-gapped instances.

Once this image has been mirrored to a registry accessible to your air-gapped cluster,
you can import the image within the Rancher UI.
This creates a local Helm repository with the Kubewarden UI chart for installation.

=== Installation steps

. https://ranchermanager.docs.rancher.com/how-to-guides/new-user-guides/kubernetes-resources-setup/secrets[Create]
a registry secret within the `cattle-ui-plugin-system` namespace.
Enter the domain of the image address in the *Registry Domain Name* field.
. Navigate back to the *Extensions* page
(for example, `+https://cluster-ip/dashboard/c/local/uiplugins+`).
. On the top right, select *Manage Extension Catalogs*.
image:ui_airgap_01.png[Manage Catalogs]
. Select the *Import Extension Catalog* button.
image:ui_airgap_02.png[Import Catalogs]
. Enter the image address in the *Catalog Image Reference* field.
. Select the secret you just created from the *Pull Secrets* drop-down menu.
image:ui_airgap_03.png[Enter Catalog Info]
. Click *Load*. The extension will now be *Pending*.
. Return to the *Extensions* page.
. Select the *Available* tab,
and click the *Reload* button to make sure that the list of extensions is up to date.
image:ui_airgap_04.png[Install Kubewarden]
. Find the Kubewarden extension you just added, and select the *Install* button.
